# file-scanner

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac  configure.ac.save  configure.ac.saved
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
conf/: backdoors.txt  exclude  include  scan.config
src/: Makefile  Makefile.in  email.cc  epoch.cc  filelisting.cc  filestats.cc  global.hpp  help.cc  log.cc  log.hpp  magic.cc  main.cc  readfile.cc  regex.cc  regex.hpp  sha1.cc  smtpfuncs.cc  smtpfuncs.hpp  symlink.cc
src/.deps/: email.Po  epoch.Po  filelisting.Po  filestats.Po  help.Po  log.Po  magic.Po  main.Po  readfile.Po  regex.Po  sha1.Po  smtpfuncs.Po  symlink.Po
